--- a/styles/index.css
+++ b/styles/index.css
@@ -17,20 +17,20 @@
 
   /* 상단 바 */
   /* 상단 바 배경 색 */
-  --header-bg: var(--body-bg);
+  --header-bg: #FEF382;
   /* 상단 바 글자 색 */
-  --header-font: #000000;
+  --header-font: #fc8976;
 
   /* 상단 배너 */
   /* 상단 배너 배경 색 */
   /* --top-banner-bg: var(--body-bg); */
-  --top-banner-bg: #000000;
+  --top-banner-bg: #FEF382;
   /* 상단 배너 글자 색 */
-  --top-banner-font: #ffffff;
+  --top-banner-font: #FC8976;
 
   /* 빅 버튼 */
   /* 빅 버튼 배경 색 */
-  --cta-button-bg: #01c0e2;
+  --cta-button-bg: #FD9D75;
   /* 빅 버튼 글자 색 */
   --cta-button-font: #ffffff;
 
@@ -48,15 +48,15 @@
 
   /* 전체 구역 색상 */
   /* 배경 색 */
-  --section-title-bg: var(--body-bg);
+  --section-title-bg: #ffff;
   /* 글자 색 */
-  --section-title-font: #000000;
+  --section-title-font: #FD9D75;
   /* 카드 색 */
   --section-card-bg: var(--body-bg);
   /* 카드 제목 색 */
-  --section-card-title-font: #000000;
+  --section-card-title-font: #FC8976;
   /* 카드 설명 색 */
-  --section-card-subtitle-font: #737373;
+  --section-card-subtitle-font: #FC8976;
   
   /* Service */
   /* 배경 색 */
@@ -72,15 +72,15 @@
 
   /* Product */
   /* 배경 색 */
-  --product-title-bg: var(--section-title-bg);
+  --product-title-bg: #fffff;
   /* 글자 색 */
-  --product-title-font: var(--section-title-font);
+  --product-title-font: #FC8976;
   /* 카드 색 */
-  --product-card-bg: var(--section-card-bg);
+  --product-card-bg: #ffffff;
   /* 카드 제목 색 */
-  --product-card-title-font: var(--section-card-title-font);
+  --product-card-title-font: #FC8976;
   /* 카드 설명 색 */
-  --product-card-subtitle-font: var(--section-card-subtitle-font);
+  --product-card-subtitle-font: #FD9D75;
 
   /* Product 태그 */
   /* 배경 색 */
@@ -101,12 +101,12 @@
   --team-card-subtitle-font: var(--section-card-subtitle-font);
 
   /* 하단 경계선 색 */
-  --footer-border-top: #d4d4d4;
+  --footer-border-top: #D4D4D4;
   /* 하단 바 */
   /* 배경 색 */
   --footer-bg: var(--body-bg);
   /* 글자 색 1 */
-  --footer-font-main: #000000;
+  --footer-font-main: #262626;
   /* 글자 색 2 */
   --footer-font-sub: #737373;
 }
@@ -164,6 +164,7 @@ a {
 /* 헤더 */
 .header__logo {
   margin-left: 24px;
+  object-fit: contain;
 }
 
 nav {
@@ -197,7 +198,7 @@ nav {
 
 /* 탑배너 */
 .top-banner__content {
-  margin: 123px 137px 48px 107px;
+  margin: 123px 13px 48px 107px;
 }
 
 .top-banner__right {
@@ -230,15 +231,15 @@ nav {
   background: var(--cta-banner-button-bg);
   color: var(--cta-banner-button-font);
   width: 310px;
-  height: 67px;
+  height: 67px;x
   font-size: 20px;
   border-radius: 6px;
 }
 
 .top-banner__image {
-  width: 400px;
+  width: 900px;
   height: 400px;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 /* 각 섹션 */
@@ -336,9 +337,10 @@ nav {
 .card__image {
   width: 100%;
   height: 230px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 4px;
   margin-bottom: 13px;
+  object-fit: contain;
 }
 
 .card__title {
