--- a/styles/index.css
+++ b/styles/index.css
@@ -13,11 +13,11 @@
 /* 색 변수 모음 */
 :root {
   /* 전체 배경 */
-  --body-bg: #FEF382;
+  --body-bg: #ffffff;
 
   /* 상단 바 */
   /* 상단 바 배경 색 */
-  --header-bg: #ffff;
+  --header-bg: #FEF382;
   /* 상단 바 글자 색 */
   --header-font: #fc8976;
 
@@ -50,13 +50,13 @@
   /* 배경 색 */
   --section-title-bg: #ffff;
   /* 글자 색 */
-  --section-title-font: #FD9D75;
+  --section-title-font: #FC8976;
   /* 카드 색 */
   --section-card-bg: var(--body-bg);
   /* 카드 제목 색 */
   --section-card-title-font: #FC8976;
   /* 카드 설명 색 */
-  --section-card-subtitle-font: #FC8976;
+  --section-card-subtitle-font: #262626;
   
   /* Service */
   /* 배경 색 */
@@ -72,7 +72,7 @@
 
   /* Product */
   /* 배경 색 */
-  --product-title-bg: #fffff;
+  --product-title-bg: #ffff;
   /* 글자 색 */
   --product-title-font: #FC8976;
   /* 카드 색 */
@@ -80,7 +80,7 @@
   /* 카드 제목 색 */
   --product-card-title-font: #FC8976;
   /* 카드 설명 색 */
-  --product-card-subtitle-font: #FD9D75;
+  --product-card-subtitle-font: #262626;
 
   /* Product 태그 */
   /* 배경 색 */
@@ -108,7 +108,7 @@
   /* 글자 색 1 */
   --footer-font-main: #262626;
   /* 글자 색 2 */
-  --footer-font-sub: #737373;
+  --footer-font-sub: #262626;
 }
 
 body {
@@ -160,11 +160,18 @@ footer {
 a {
   text-decoration: none;
   display: block;
-}
+} 
 /* 헤더 */
 .header__logo {
   margin-left: 24px;
   object-fit: contain;
+  width: 100;
+  height: 50px;
+  }
+  
+.test{
+  max-width: 100%;
+  max-height: 100%;
 }
 
 nav {
@@ -231,7 +238,7 @@ nav {
   background: var(--cta-banner-button-bg);
   color: var(--cta-banner-button-font);
   width: 310px;
-  height: 67px;x
+  height: 67px;
   font-size: 20px;
   border-radius: 6px;
 }
@@ -270,19 +277,19 @@ nav {
   color: var(--product-title-font);
 }
 
-#product-section > .grid-3fr > .card__ {
+#product-section > .grid-5fr > .card__ {
   background-color: var(--product-card-bg);
 }
 
-#product-section > .grid-3fr > .card__ > .card__title {
+#product-section > .grid-5fr > .card__ > .card__title {
   color: var(--product-card-title-font);
 }
 
-#product-section > .grid-3fr > .card__ > .card__subtitle {
+#product-section > .grid-5fr > .card__ > .card__subtitle {
   color: var(--product-card-subtitle-font);
 }
 
-#product-section > .grid-3fr > .card__ > .card__tag {
+#product-section > .grid-5fr > .card__ > .card__tag {
   color: var(--product-card-tag-font);
   background-color: var(--product-card-tag-bg);
 }
@@ -332,6 +339,13 @@ nav {
   display: grid;
   gap: 24px;
   grid-template-columns: 1fr 1fr 1fr 1fr;
+}
+
+.grid-5fr {
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: 1fr 1fr;
+  object-fit: contain;
 }
 
 .card__image {
@@ -400,7 +414,13 @@ nav {
   display: flex;
 }
 .footer__top__logo {
-  width: 50%;
+  width: 250px;
+  height: 70px;
+  }
+  
+.test{
+  max-width: 100%;
+  max-height: 100%;
 }
 .footer__top__info {
   width: 50%;
